Mon Jul 13 22:49:15 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: check for inline by ourselves if it's not
	defined in glibconfig.h. So inline works if glib is compiled
	with a different compiler than gimp. The plug-ins that use
	inline #include "config.h" now (blur, destripe, emboss,
	gfli, nlfilt, ps, randomize, sinus, and zealouscrop)

	* app/main.c: applied gimp-kc-980707-0; fixes command line
	parsing

	* plug-ins/dbbrowser/dbbrowser_utils.c: searching by name does
	- <-> _ translation

	* Added filter pack plugin

Mon Jul 13 22:00:31 EDT 1998 Adrian Likins <adrian@gimp.org>
	
	* app/rect_select.c : argh, s/snprintf/g_snprintf

Mon Jul 13 19:07:43 EDT 1998  Adrian Likins <adrian@gimp.org>

	* app/drawable.c app/commands.c app/gimpimage.h
          app/layers_dialog.c: applied gimp-kc-980707-1 from
	  Kevin Cozens <kcozens@interlog.com>

	* Dialog boxes for creating a new image or a new layer now include
          as a fill type option.

Mon Jul 13 18:08:35 EDT 1998 Adrian Likins <adrian@gimp.org>

	* plug-ins/script-fu/scripts/3dTruchet.scm
	 plug-ins/script-fu/scripts/flatland.scm
	 plug-ins/script-fu/scripts/truchet.scm:
	updated these scripts to return the display they open,
	mainly so i can use them in another script

Mon Jul 13 17:48:21 EDT 1998 Adrian Likins <adrian@gimp.org>

	* app/rect_select.[ch]: applied gimp-chap-980709-0
	from  Chap Lovejoy  (chap@cc.gatech.edu)

	From the README:

	Adds fixed size and fixed ratio rectangular selections to the 
	gimp.

        Fixed size is enabled by filling in the height and width boxes in 
        the rectangular selection tool options box and checking the 
        "fixed size" checkbox.

        Fixed ratio is enabled by enabling fixed size (set the height and
        width to the desired ratio values) and holding shift after
	starting the selection (holding shift while starting the selection
	will change the selection operation to add).

Tue Jul 14 00:26:49 MEST 1998 Sven Neumann <sven@gimp.org>
