@@ -407,11 +407,6 @@ if test $ac_cv_path_LPC_COMMAND != ":"; then
   LPC_DEF="-DLPC_COMMAND=\\\"$ac_cv_path_LPC_COMMAND\\\""
 fi
 
-AC_DEFINE_UNQUOTED(GIMP_MAJOR_VERSION, $GIMP_MAJOR_VERSION)
-AC_DEFINE_UNQUOTED(GIMP_MINOR_VERSION, $GIMP_MINOR_VERSION)
-AC_DEFINE_UNQUOTED(GIMP_MICRO_VERSION, $GIMP_MICRO_VERSION)
-AC_DEFINE_UNQUOTED(GIMP_VERSION, "$GIMP_VERSION")
-
 AC_SUBST(GIMP_MAJOR_VERSION)
 AC_SUBST(GIMP_MINOR_VERSION)
 AC_SUBST(GIMP_MICRO_VERSION)
@@ -460,6 +455,7 @@ Makefile
 gimprc
 gimprc_user
 gimptool
+libgimp/gimpfeatures.h
 libgimp/Makefile
 plug-ins/Makefile
 plug-ins/libgck/Makefile
