@@ -22,11 +22,17 @@
 
 #include <glib.h>
 #include <libgimp/gimpenums.h>
+#include <libgimp/gimpfeatures.h>
 
 
 #ifdef __cplusplus
 extern "C" {
 #endif /* __cplusplus */
+
+
+extern const guint gimp_major_version;
+extern const guint gimp_minor_version;
+extern const guint gimp_micro_version;
 
 
 typedef struct _GPlugInInfo  GPlugInInfo;
